Css is updated to add Object Related Css and fixed overflow div issues

--- a/src/neuroglancer/perspective_view/panel.css
+++ b/src/neuroglancer/perspective_view/panel.css
@@ -26,15 +26,31 @@ input.perspective-panel-show-slice-views {
   overflow-y: hidden;
   width: 280px;
   max-height: 80vh;
-  overflow-x: scroll;
+  overflow-x: hidden;
 }
 
+.perspective-panel-object {
+  position: fixed;
+  right: 0px;
+  overflow-y: hidden;
+  max-height: 80vh;
+  overflow-x: hidden;
+}
 .perspective-panel-control-container {
   overflow-y: scroll;
-  max-height: 80vh;
+  height: 50vh;
+  width: 280px;
   overflow-x: scroll;
 }
 
+.perspective-panel-object-container {
+  overflow-y: scroll;
+  height: 50vh;
+  width: 280px;
+  background-color: white;
+  overflow-x: hidden;
+  display: none;
+}
 .perspective-panel-control .definition-outer-container {
   display: block;
 }
@@ -69,10 +85,32 @@ input.perspective-panel-show-slice-views {
   white-space: nowrap;
   font-size: 10pt;
   display: inline;
+  cursor: pointer;
 }
 .perspective-panel-control .button:hover {
     background-color: #e7e7e7; /* Green */
     color: black;
+}
+
+.closediv {
+    background-color: #eee;
+    color: #444;
+    cursor: pointer;
+    padding: 20px;
+    width: 280px;
+    border: 2px;
+    text-align: left;
+    outline: none;
+    font-size: 15px;
+    transition: 0.4s;
+}
+
+.closediv:after {
+    content: '✖';
+    color: #777;
+    font-weight: bold;
+    float: right;
+    margin-right: 15px;
 }
 
 .togglediv {
@@ -102,14 +140,24 @@ input.perspective-panel-show-slice-views {
 .active:after {
     content: "\2212";
 }
+
+.rdiv {
+    border-radius: 15px 50px;
+    border:2px solid #DCDCDC;
+    padding: 10px;
+    width: 220px;
+    margin-left: 5px;
+    margin-top: 5px;
+    height: 80px;
+}
 .panel {
     padding: 0 18px;
     background-color: white;
     width: 264px;
     display: none;
     color: black;
-    height: 60vh;
-    max-height: 80vh;
+    height: 75vh;
+    max-height: 75vh;
     overflow-y: hidden;
     overflow-x: hidden;
     transition: max-height 0.2s ease-out;
